@@ -19,6 +19,7 @@ Bug fixes:
 - A translation was missing in the unsuscribe page.
 - #740 (CPSSubscriptions specific permissions not imported and intialized)
 - Fix security bug. A user with ManageSubscriptions rights in a context getting a container looked up by acquisition where it hadn't the ManageSubscriptions permission over there couldn't updateProperties() it. A new container will be created where the user wants to e define custom notifications in its own sub-tree
+- #408 (Events on folderish document)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Unified the sender name/email mechanism so that default sender is always the
